# Tasty.pl_UI

./: db.sqlite3  pyproject.toml
Dashboard/: settings.py  urls.py
ui_app/: models.py  views.py
ui_app/templates/: base.html  restaurant_detail.html
