[tool.poetry]
name = "10 - tasty.pl ui"
version = "0.1.0"
description = ""
authors = ["natcza <natalia.nc.czajkowska@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
